--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@react-three/drei": "9.32",
+    "@react-three/drei": "^9.32.3",
     "@react-three/fiber": "^8.8.7",
+    "leva": "^0.9.35",
+    "r3f-perf": "6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
